Fix title alignment

--- a/resources/components/results/PageResult.less
+++ b/resources/components/results/PageResult.less
@@ -25,7 +25,7 @@
 	//override mw h3 style
 	.sdms-page-result__title {
 		.flex-display();
-		align-items: center;
+		align-items: baseline;
 
 		h3 {
 			margin-top: unset;
